--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,17 @@ environment:
   sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  dots_indicator: ^2.1.0
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.17
+  get: ^4.6.5
   http: ^0.13.5
 
-dev_dependencies:
-  # flutter_launcher_icons: "^0.11.0"
-
+dev_dependencies: null
+# flutter_launcher_icons: "^0.11.0"
 flutter_native_splash:
   color: "#D3D3D3"
   # color_dark: "#000000"
