--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_native_splash: ^2.2.17
   get: ^4.6.5
   http: ^0.13.5
+  shared_preferences: ^2.0.17
 
 dev_dependencies: null
 # flutter_launcher_icons: "^0.11.0"
