--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_native_splash: ^2.2.17
   get: ^4.6.5
   http: ^0.13.5
+  mpesa_flutter_plugin: ^1.6.1
+  provider: ^6.0.5
+  qr_code_scanner: ^1.0.1
   shared_preferences: ^2.0.17
 
 dev_dependencies: null
