--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.4.3
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.1.0
   firebase_auth: ^4.2.8
