--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.17
   get: ^4.6.5
+  google_sign_in: ^6.0.1
   http: ^0.13.5
   mpesa_flutter_plugin: ^1.6.1
   provider: ^6.0.5
