--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,12 @@ dependencies:
   firebase_core: ^2.6.1
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^5.0.7
+  flutter_google_places: ^0.3.0
   flutter_native_splash: ^2.2.17
+  geolocator: ^9.0.2
   get: ^4.6.5
+  google_maps_flutter: ^2.2.4
   google_sign_in: ^6.0.1
   http: ^0.13.5
   mpesa_flutter_plugin: ^1.6.1
@@ -32,7 +36,7 @@ flutter_native_splash:
   color: "#D3D3D3"
   # color_dark: "#000000"
   image: assets/images/logo.png
-  image_dark: assets/images/logo_dark.jpg
+  # image_dark: assets/images/logo_dark.jpg
   flutter_lints: ^2.0.0
 
   flutter_test:
