--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,18 +17,26 @@ dependencies:
   firebase_core: ^2.6.1
   flutter:
     sdk: flutter
+  flutter_barcode_scanner: ^2.0.0
   flutter_facebook_auth: ^5.0.7
   flutter_google_places: ^0.3.0
+  flutter_google_places_hoc081098: ^1.0.0-nullsafety.1
   flutter_native_splash: ^2.2.17
-  geolocator: ^9.0.2
+  flutter_polyline_points: ^1.0.0
   get: ^4.6.5
   google_maps_flutter: ^2.2.4
+  google_place: ^0.4.7
   google_sign_in: ^6.0.1
   http: ^0.13.5
+  location: ^4.4.0
   mpesa_flutter_plugin: ^1.6.1
+  path_provider: ^2.0.13
   provider: ^6.0.5
-  qr_code_scanner: ^1.0.1
+  share: ^2.0.4
+  qr_flutter: ^4.0.0
   shared_preferences: ^2.0.17
+  uuid: ^3.0.7
+  qrscan: ^0.3.3
 
 dev_dependencies: null
 # flutter_launcher_icons: "^0.11.0"
