--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,15 @@ dependencies:
   google_sign_in: ^6.0.1
   http: ^0.13.5
   location: ^4.4.0
+  mobile_scanner: ^3.0.0
   mpesa_flutter_plugin: ^1.6.1
   path_provider: ^2.0.13
   provider: ^6.0.5
-  share: ^2.0.4
+  qr_code_scanner: ^1.0.1
   qr_flutter: ^4.0.0
+  share: ^2.0.4
   shared_preferences: ^2.0.17
   uuid: ^3.0.7
-  qrscan: ^0.3.3
 
 dev_dependencies: null
 # flutter_launcher_icons: "^0.11.0"
