--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dots_indicator: ^2.1.0
   firebase_auth: ^4.2.8
   firebase_core: ^2.6.1
+  firebase_messaging: ^14.3.0
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
